# projeto_streamlit

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
